--- a/mainmenu/styles.css
+++ b/mainmenu/styles.css
@@ -57,6 +57,7 @@ select {
     font-size: 16px;
     height: 100%;
     border: 2px solid black;
+    border-radius: 5px;
     appearance: none;
     box-sizing: border-box;
     background-image: url("../icons/dropdown-pfeil.png");
@@ -101,12 +102,14 @@ select {
 }
 
 .dish-head > img {
+    min-height: 200px;
+    max-width: 300px;
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.dish-name {
+.dish-description {
     margin: 5px 2px;
     font-size: 20px;
 }
