--- a/mainmenu/styles.css
+++ b/mainmenu/styles.css
@@ -20,7 +20,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    padding: 10px;
+    padding: 5px;
     border-radius: 5px;
     border: 2px solid black;
     margin-right: 10px;
@@ -98,7 +98,6 @@ select {
 
 .dish-head {
     position: relative;
-    border-bottom: 2px solid black;
     max-height: 200px;
 }
 
@@ -111,7 +110,9 @@ select {
 }
 
 .dish-description {
-    margin: 5px 2px;
+    border-top: 2px solid black;
+    padding-top: 5px;
+    padding-left: 2px;
     font-size: 20px;
 }
 
