--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
-    padding: 0 10px 10px 10px;
-    margin: 0 10px 10px 10px;
+    padding: 0 0  10px 10px;
+    margin: 0 0 10px 10px;
     background-color: #f8f8f8;
 }
 
