--- a/weekView/weekView.css
+++ b/weekView/weekView.css
@@ -10,19 +10,32 @@ body {
 
 #weekly-menu {
     width: 100%;
+    table-layout: fixed; 
     border-collapse: collapse;
-    margin-top: 50px; /* Add a top margin */
+    margin-top: 50px;
 }
 
 #weekly-menu th, #weekly-menu td {
     text-align: center;
-    padding: 10px;
+    padding: 12px;
     border: 1px solid #ddd;
     border-radius: 10px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
 }
 
+#weekly-menu td {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 #weekly-menu th {
     background-color: #ffb266;
     color: white;
+}
+
+#weekly-menu img {
+    width: 100px;
+    height: auto; 
 }
