--- a/weekView/weekView.css
+++ b/weekView/weekView.css
@@ -1,41 +1,73 @@
+html, body {
+    margin: 25px 0 0;
+}
+
 body {
     font-family: Arial, sans-serif;
 }
 
-.language-switch {
-    position: absolute;
-    top: 10px;
-    right: 10px;
+.container {
+
+}
+
+table {
+
 }
 
 #weekly-menu {
     width: 100%;
-    table-layout: fixed; 
-    border-collapse: collapse;
-    margin-top: 50px;
+    table-layout: fixed;
+    border-collapse: separate;
+    border-spacing: 10px 5px;
 }
 
-#weekly-menu th, #weekly-menu td {
-    text-align: center;
+#weekly-menu th,
+#weekly-menu td {
     padding: 12px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
+    border: 2px solid #ddd;
+    border-radius: 8px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
 }
 
 #weekly-menu td {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    padding: 12px;
+    vertical-align: top;
+}
+
+#weekly-menu td img {
+    margin-bottom: 8px;
+    aspect-ratio: 1 / 0.5;
+    object-fit: cover;
+}
+
+#weekly-menu td a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
 }
 
 #weekly-menu th {
-    background-color: #ffb266;
+    background-color: green;
     color: white;
+    border: 2px solid black;
+    border-radius: 5px;
 }
 
 #weekly-menu img {
-    width: 100px;
-    height: auto; 
+    max-width: 100%;
+    min-height: 50px;
+    border-bottom: 2px solid black;
+}
+
+.dish {
+    min-height: 20%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    text-align: center;
+    margin-bottom: 10px;
+    border: 2px solid black;
+    border-radius: 2px;
 }
