--- a/styles.css
+++ b/styles.css
@@ -135,7 +135,6 @@ select {
 }
 
 .menu {
-    flex: 1;
     display: flex;
     flex-direction: column;
     padding-top: 10px;
@@ -153,10 +152,10 @@ select {
 }
 
 .dish {
-    flex: 1 1 0;
+    flex: 0 0 19.5%;
     margin-top: 10px;
+    max-width: 100%;
     min-width: 250px;
-    max-width: 300px;
     display: flex;
     flex-direction: column;
     border: 2px solid black;
