--- a/filterView/filter.css
+++ b/filterView/filter.css
@@ -2,10 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    overflow: hidden;
     background-color: #f8f8f8;
 }
 
@@ -17,9 +14,21 @@ body {
     border-radius: 10px;
     display: inline-block;
     width: 200px;
-    font-size: 16px;
+    font-size: 1.5em;
     background-color: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.with-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
+.with-icon > img {
+    width: 2em;
+    padding-right: 10px;
 }
 
 .reset-btn {
@@ -36,44 +45,19 @@ body {
 }
 
 .filter-line {
-    text-align: center;
-}
-
-.content-item {
-    display: none;
-    margin: 15px;
-    padding: 15px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-}
-
-.content-item.active {
-    display: block;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .filter-container {
-    margin-bottom: 30px;
-    text-align: center;
-}
-
-.language-container {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-}
-
-.language-btn {
-    margin: 10px;
-    cursor: pointer;
-    border: 2px solid #000;
-    border-radius: 10px;
-    background-color: #fff;
-}
-
-.navigation-container {
-    position: absolute;
-    top: 10px;
-    left: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 .back-btn {
