--- a/filterView/filter.css
+++ b/filterView/filter.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
+    padding: 0;
     height: 100vh;
     overflow: hidden;
     background-color: #f8f8f8;
@@ -13,7 +14,7 @@ body {
     border: 2px solid #000;
     border-radius: 10px;
     display: inline-block;
-    width: 200px;
+    min-width: 300px;
     font-size: 1.5em;
     background-color: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -50,6 +51,7 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .filter-container {
